k8s/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penguin
  namespace: project-template
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - "penguin.penguintech.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1
      backendRefs:
        - name: flask-backend
          port: 5000
    - matches:
        - path:
            type: PathPrefix
            value: /api/v2
      backendRefs:
        - name: go-backend
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webui
          port: 3000
